--- a/DataGps/pom.xml
+++ b/DataGps/pom.xml
@@ -17,4 +17,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>co.gps.app.wx</groupId>
+  		<artifactId>DTOGps</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
