--- a/CrossCuttingGps/pom.xml
+++ b/CrossCuttingGps/pom.xml
@@ -17,4 +17,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>co.gps.app.crosscutting</groupId>
+  		<artifactId>CrossCutting</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
